# rapl-attack

./: .clang-format  .gitignore  CMakeLists.txt  clean.sh  energy_power.py  energy_readings.csv  run.sh  stress_run.sh  time_slots.txt
include/: aes.hpp  computations.hpp
scripts/: energy_power.py  extract_readings.py  t_test.py  t_test_separate.py
src/: aes.cpp  computations.cpp  computations.s  rapl_simple.cpp  rapl_threaded.cpp  test.cpp  test_suite.cpp
